css/index.css
/*NAVIGATION START*/
/* Sticky Navigation - Outside Grid Wrapper */
.nav-link {
  color: var(--black);
}

header {
  background-color: var(--nude);
}

.bonbids-background {
  width: 100%;
}

.assemble-background {
  width: 100%;
}

.case-study-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  max-width: 110rem;
  align-items: center;
  justify-content: center;
  padding-top: 6rem;
  padding-bottom: 6rem;
  grid-gap: 5rem;
  margin: auto;
}

.case-study-section img {
  width: 100%;
}

.assemble-screen-section {
  display: block;
  height: 100%;
  margin: auto;
  align-items: center;
}

.section-wide {
  max-width: 120rem;
  margin: auto;
  align-items: center;
}

.assemble-explanation-section {
  margin: auto;
}

.contact-section p {
  text-align: center;
  color: var(--black);
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  line-height: 3rem;
}



.contact-section-background {
padding-top:8rem;
  width: 100%;
  margin-top: 6rem;
  justify-content: center;
  background-color: var(--nude);
}

.contact-btns {
  float: center;
}

.I-am-Emma {
  display: block;
  padding: 5rem 0 5rem 0;
  max-width: 90rem;
  margin: auto;
}

.I-am-Emma p {
  text-align: center;
  padding: 1.5rem;
}

.top-section {
  width: 100%;
  background-image: linear-gradient(var(--nude), white);
  padding: 2rem 0 10rem 0;
}

.hi {
  font-family: 'Playfair Display', serif;
  color: var(--navy);
  text-align: center;
  padding-bottom: 1rem;
}

.work-link {
  position: relative;
  font-family: 'Nunito', sans-serif;
  font-weight: 400;
}
a {
  color: var(--black)
}
.see-work {
  margin-top: 18rem;
  text-align: center;
}

/*TRIANGLE
_______________________*/
.work-link::after {
  position: absolute;
  content: "";
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 1rem 1rem 0 1rem;
  border-color: var(--navy) transparent transparent transparent;
  bottom: -2.5rem;
  left: calc(50% - 1rem);
}





/*ANIMATIONS*/
/*@-webkit-keyframes fadeInDown {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

@keyframes fadeInDown {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0, -100%, 0);
    transform: translate3d(0, -100%, 0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

.fadeInDown {
  -webkit-animation-name: fadeInDown;
  animation-name: fadeInDown;
}*/
@-webkit-keyframes bounce {
  from {
    left: 0px;
  }

  to {
    left: 200px;
  }
}

.bounce {
  -webkit-animation-name: bounce;
  -webkit-animation-duration: 4s;
  -webkit-animation-iteration-count: 10;
  -webkit-animation-direction: alternate;
}

.animated.slower {
  -webkit-animation-duration: 3s;
  animation-duration: 3s;
}

/*ANIMATION DONE*/
@media screen and (max-width:840px) {
  .case-study-section {
    display: grid;
    grid-template-columns: 1fr;
  }

  .grid-row1 {
    grid-row: 1;
  }

  .case-study-text {
    order: 2;
  }

  .assemble-explanation-section {
    width: 100%;
  }

  .bonbids-case-study .section-wide {
    order: 1;
  }

  .hi {
    font-size: 5.9rem;
    text-align: center;
    line-height: 6.3rem;
  }

}
@media screen and (min-width:896px) {
  .I-am-Emma p {
    line-height: 3rem;
    font-size: 2.2rem;
  }
  .hi{
      font-size: 7.5rem;
  }
  .work-link{
      font-size: 2rem;
  }
}
@media screen and (max-width:895px) {
  .I-am-Emma p {
    line-height: 2.55rem;
    font-size: 1.9rem;
  }

  .work-link{
      font-size: 1.7rem;
  }
  .contact-section p{
    line-height: 2.55rem;
  }
}

